--- a/src/GSvar/GeneWidget.ui
+++ b/src/GSvar/GeneWidget.ui
@@ -229,6 +229,13 @@
        </widget>
       </item>
       <item row="3" column="0">
+       <widget class="QLabel" name="label_13">
+        <property name="text">
+         <string>IDs:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
        <widget class="QLabel" name="label_14">
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;HGNC locus group.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -238,7 +245,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QLabel" name="type">
         <property name="text">
          <string/>
@@ -248,37 +255,57 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="label_13">
+      <item row="5" column="0">
+       <widget class="QLabel" name="pseudogene_label">
         <property name="text">
-         <string>HGNC ID:</string>
+         <string>Pseudogene(s):</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
-       <widget class="QLabel" name="hgnc_id">
+      <item row="5" column="1">
+       <widget class="QLabel" name="pseudogenes">
         <property name="text">
          <string/>
-        </property>
-        <property name="openExternalLinks">
-         <bool>true</bool>
         </property>
         <property name="textInteractionFlags">
          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label_3">
+      <item row="6" column="0">
+       <widget class="QLabel" name="imprinting_label">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Imprinting source allele and status from https://www.geneimprint.com/site/genes-by-species&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
-         <string>HGNC previous symbols:</string>
+         <string>Imprinting:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QLabel" name="imprinting">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="toolTip">
+         <string>previous symbols according to HGNC</string>
+        </property>
+        <property name="text">
+         <string>previous symbols:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
+      <item row="8" column="1">
        <widget class="QLabel" name="hgnc_previous">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -297,17 +324,20 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="0">
+      <item row="9" column="0">
        <widget class="QLabel" name="label_6">
+        <property name="toolTip">
+         <string>synonymous symbols according to HGNC</string>
+        </property>
         <property name="text">
-         <string>HGNC synonymous symbols:</string>
+         <string>synonymous symbols:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
         </property>
        </widget>
       </item>
-      <item row="8" column="1">
+      <item row="9" column="1">
        <widget class="QLabel" name="hgnc_synonymous">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -326,7 +356,7 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
+      <item row="10" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>Inheritance:</string>
@@ -336,7 +366,7 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="1">
+      <item row="10" column="1">
        <widget class="QLabel" name="inheritance">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -352,7 +382,7 @@
         </property>
        </widget>
       </item>
-      <item row="10" column="0">
+      <item row="11" column="0">
        <widget class="QLabel" name="label_7">
         <property name="text">
          <string>gnomAD o/e (synonymous):</string>
@@ -362,7 +392,7 @@
         </property>
        </widget>
       </item>
-      <item row="10" column="1">
+      <item row="11" column="1">
        <widget class="QLabel" name="oe_syn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -378,7 +408,7 @@
         </property>
        </widget>
       </item>
-      <item row="11" column="0">
+      <item row="12" column="0">
        <widget class="QLabel" name="label_9">
         <property name="text">
          <string>gnomAD o/e (missense):</string>
@@ -388,7 +418,7 @@
         </property>
        </widget>
       </item>
-      <item row="11" column="1">
+      <item row="12" column="1">
        <widget class="QLabel" name="oe_mis">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -404,7 +434,7 @@
         </property>
        </widget>
       </item>
-      <item row="12" column="0">
+      <item row="13" column="0">
        <widget class="QLabel" name="label_10">
         <property name="text">
          <string>gnomAD o/e (loss-of-function):</string>
@@ -414,7 +444,7 @@
         </property>
        </widget>
       </item>
-      <item row="12" column="1">
+      <item row="13" column="1">
        <widget class="QLabel" name="oe_lof">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -430,7 +460,7 @@
         </property>
        </widget>
       </item>
-      <item row="13" column="0">
+      <item row="14" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Comment:</string>
@@ -440,7 +470,7 @@
         </property>
        </widget>
       </item>
-      <item row="13" column="1">
+      <item row="14" column="1">
        <widget class="QLabel" name="comments">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -462,37 +492,13 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="pseudogene_label">
-        <property name="text">
-         <string>Pseudogene(s):</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLabel" name="pseudogenes">
+      <item row="3" column="1">
+       <widget class="QLabel" name="ids">
         <property name="text">
          <string/>
         </property>
-        <property name="textInteractionFlags">
-         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="imprinting_label">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Imprinting source allele and status from https://www.geneimprint.com/site/genes-by-species&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="text">
-         <string>Imprinting:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QLabel" name="imprinting">
-        <property name="text">
-         <string/>
+        <property name="openExternalLinks">
+         <bool>true</bool>
         </property>
         <property name="textInteractionFlags">
          <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
