--- a/src/GSvar/VariantWidget.ui
+++ b/src/GSvar/VariantWidget.ui
@@ -104,6 +104,9 @@
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_4">
+          <property name="toolTip">
+           <string>gnomAD allele frequency</string>
+          </property>
           <property name="text">
            <string>gnomAD AF:</string>
           </property>
