NGSD:added small_variants_callset ; GSvar: added option for calling information in sample search ; NGSDExportSamples: added 'add_call_details' flag

--- a/src/GSvar/SampleSearchWidget.ui
+++ b/src/GSvar/SampleSearchWidget.ui
@@ -574,16 +574,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QCheckBox" name="add_outcome">
-        <property name="text">
-         <string>add diagnostic outcome</string>
-        </property>
-        <property name="checked">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="1">
        <widget class="QCheckBox" name="add_disease_details">
         <property name="text">
@@ -591,23 +581,6 @@
         </property>
         <property name="checked">
          <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="6">
-       <widget class="QCheckBox" name="add_normal_sample">
-        <property name="toolTip">
-         <string>Normal germline sample associated to a tumor sample.</string>
-        </property>
-        <property name="text">
-         <string>add normal sample</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="5">
-       <widget class="QCheckBox" name="add_qc">
-        <property name="text">
-         <string>add QC metrics</string>
         </property>
        </widget>
       </item>
@@ -628,6 +601,43 @@
         </property>
         <property name="text">
          <string>add dates</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QCheckBox" name="add_outcome">
+        <property name="text">
+         <string>add diagnostic outcome</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="5">
+       <widget class="QCheckBox" name="add_qc">
+        <property name="text">
+         <string>add QC metrics</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="6">
+       <widget class="QCheckBox" name="add_normal_sample">
+        <property name="toolTip">
+         <string>Normal germline sample associated to a tumor sample.</string>
+        </property>
+        <property name="text">
+         <string>add normal sample</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="8">
+       <widget class="QCheckBox" name="add_call_details">
+        <property name="toolTip">
+         <string>Added variant caller, variant caller version and variant calling date for small variants, CNVs and SVs.</string>
+        </property>
+        <property name="text">
+         <string>add calling details</string>
         </property>
        </widget>
       </item>
