--- a/src/GSvar/IgvLogWidget.ui
+++ b/src/GSvar/IgvLogWidget.ui
@@ -150,6 +150,11 @@
      </column>
      <column>
       <property name="text">
+       <string>start time</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>duration [s]</string>
       </property>
      </column>
