--- a/src/GSvar/ProjectWidget.ui
+++ b/src/GSvar/ProjectWidget.ui
@@ -31,6 +31,9 @@
    </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>3</number>
+     </property>
      <item>
       <widget class="QToolButton" name="edit_btn">
        <property name="text">
@@ -39,13 +42,6 @@
        <property name="icon">
         <iconset resource="GSvar.qrc">
          <normaloff>:/Icons/Edit.png</normaloff>:/Icons/Edit.png</iconset>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="diag_btn">
-       <property name="text">
-        <string>diagnostic status overview</string>
        </property>
       </widget>
      </item>
