Somatic Report: Add checkbox to include/exclude Mutationburden in the report

--- a/src/GSvar/SomaticReportDialog.ui
+++ b/src/GSvar/SomaticReportDialog.ui
@@ -217,6 +217,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QCheckBox" name="include_mutation_burden">
+           <property name="text">
+            <string>Include mutation burden</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QCheckBox" name="include_msi_status">
            <property name="minimumSize">
             <size>
