--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -389,6 +389,9 @@
     <addaction name="actionSettings"/>
     <addaction name="actionEncrypt"/>
     <addaction name="separator"/>
+    <addaction name="actionOpenLogFile"/>
+    <addaction name="actionClearLogFile"/>
+    <addaction name="separator"/>
     <addaction name="actionAbout"/>
    </widget>
    <widget class="QMenu" name="menuTools">
@@ -1452,6 +1455,16 @@
   <action name="actionDeleteIgvFolder">
    <property name="text">
     <string>Delete IGV folder</string>
+   </property>
+  </action>
+  <action name="actionOpenLogFile">
+   <property name="text">
+    <string>Open log file</string>
+   </property>
+  </action>
+  <action name="actionClearLogFile">
+   <property name="text">
+    <string>Clear log file</string>
    </property>
   </action>
  </widget>
